# Luminos

./: .gitignore  README.md  build_appimage.sh  install-desktop.sh  luminos.desktop  luminos_cli.py  luminos_gui.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
luminos/: app.py
luminos/core/: color.py  curves.py  inversion.py  pipeline.py
luminos/io/: exif.py  export.py  raw_loader.py  tiff_loader.py
luminos/profiles/: __init__.py  loader.py  schema.py
luminos/profiles/data/: agfa_vista_200.json  cinestill_800t.json  fomapan_100.json  fuji_pro_400h.json  fuji_superia_200.json  fuji_superia_400.json  ilford_delta_100.json  ilford_delta_400.json  ilford_fp4_plus.json  ilford_hp5_plus.json  ilford_pan_f_plus.json  kodak_colorplus_200.json  kodak_ektar_100.json  kodak_gold_200.json  kodak_portra_160.json  kodak_portra_400.json  kodak_portra_800.json  kodak_tmax_100.json  kodak_tmax_400.json  kodak_trix_400.json
luminos/ui/: Bug: Freistellfunktion ((Crop) macht Pro.txt  activation_controller.py  comparison.py  crop_state.py  curve_widget.py  dialogs.py  export_controller.py  export_params.py  histogram.py  history.py  image_utils.py  main_window.py  navigator_controller.py  session.py  slider_registry.py  widgets.py  workers.py
tests/: test_activation_controller.py  test_comparison.py  test_core.py  test_crop_state.py  test_export_controller.py  test_export_params.py  test_history.py  test_image_utils.py  test_io.py  test_navigator_controller.py  test_session.py  test_slider_registry.py  test_workers.py
