[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "luminos"
version = "0.1.0"
description = "Film Negative Converter — RAW/TIFF to positive"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "rawpy>=0.21",
    "numpy>=1.26",
    "Pillow>=10.0",
    "tifffile>=2023.1",
]

[project.optional-dependencies]
fast = ["pyvips"]
exif = ["piexif"]

[project.scripts]
luminos = "luminos.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["luminos*"]
